004-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: lizzoslunch
spec:
  type: LoadBalancer  
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  selector:
    app: type-a
